# ThreeDimensions

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Manual.md  README.md  pyproject.toml
cpp_core/: bindings.cpp
cpp_core/geometry/: Primitives.cpp
cpp_core/mesh/: Mesh.cpp  Mesh.h
python/threedimensions/: __init__.py  core.py  curves.py  exporters.py  mesh.py  modifiers.py  scene.py  sculpt.py
