[build-system]
requires = ["scikit-build-core", "pybind11", "cmake", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "threedimensions"
version = "0.1.0"
description = "Professional 3D Modeling Engine & SDK"
readme = "README.md"
authors = [
  { name = "LegedsDaD", email = "legendsdad001@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
]
dependencies = [
    "numpy",
]

[tool.scikit-build]
cmake.version = ">=3.15"
wheel.expand-macos-universal-tags = true
